--- a/Redux-practice/package.json
+++ b/Redux-practice/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devserver": "webpack-dev-server --port 8090 --host 127.0.0.1"
+    "devserver": "webpack-dev-server --progress --colors --port 8090 --host 127.0.0.1"
   },
   "author": "Sergey Melnychuk <sergiomelnychuk@gmail.com>",
   "license": "ISC",
@@ -29,10 +29,14 @@
     "react-hot-loader": "3.1.3",
     "sass-loader": "6.0.6",
     "style-loader": "0.20.1",
-    "url-loader": "0.6.2"
+    "url-loader": "0.6.2",
+    "redux-thunk": "2.2.0"
   },
   "dependencies": {
+    "faker": "^4.1.0",
     "react": "16.2.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
