--- a/setup-env/package.json
+++ b/setup-env/package.json
@@ -32,11 +32,11 @@
     "url-loader": "0.6.2"
   },
   "dependencies": {
-    "babel-plugin-react-html-attrs": "2.1.0",
-    "eslint-plugin-import": "2.8.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
