--- a/Chat-3/.eslintrc
+++ b/Chat-3/.eslintrc
@@ -1,8 +1,8 @@
 {
     "extends": [
       "eslint:recommended",
-       "plugin:import/errors",
-       "plugin:import/warnings"
+      //  "plugin:import/errors",
+      //  "plugin:import/warnings"
     ],
     "parser": "babel-eslint",
     "env": {
@@ -19,7 +19,7 @@
     },
     "plugins": [
       "react",
-      "import" 
+      // "import" 
     ],
     "rules": {
       "no-debugger": 0,
