--- a/Chat-3/package.json
+++ b/Chat-3/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devserver": "webpack-dev-server --progress --colors --port 8090 --host 127.0.0.1"
+    "devserver": "webpack-dev-server --colors --progress --port 8090 --host 127.0.0.1"
   },
   "author": "Sergey Melnychuk <sergiomelnychuk@gmail.com>",
   "license": "ISC",
@@ -35,6 +35,8 @@
     "babel-plugin-react-html-attrs": "^2.1.0",
     "eslint-plugin-import": "^2.8.0",
     "react": "16.2.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
