--- a/Chat-3/package.json
+++ b/Chat-3/package.json
@@ -1,42 +1,15 @@
 {
-  "name": "chat_3",
-  "version": "1.0.0",
-  "description": "chat 3",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "devserver": "webpack-dev-server --colors --progress --port 8090 --host 127.0.0.1"
-  },
-  "author": "Sergey Melnychuk <sergiomelnychuk@gmail.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.11.1",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.1",
-    "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "6.24.1",
-    "css-loader": "0.28.9",
-    "eslint": "4.16.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-react": "7.6.0",
-    "file-loader": "1.1.6",
-    "html-webpack-plugin": "2.30.1",
-    "node-sass": "4.7.2",
-    "react-hot-loader": "3.1.3",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.20.1",
-    "url-loader": "0.6.2"
-  },
-  "dependencies": {
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "name": "lesson5",
+    "version": "1.0.0",
+    "description": "lesson5 - chat on WebSocket",
+    "main": "index.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start:client": "cd client && npm run devserver",
+      "start:server": "cd server && node app.js",
+      "start": "concurrently \"npm run start:server\" \"npm run start:client\""
+    },
+    "author": "",
+    "license": "ISC"
   }
-}
+  
