--- a/Chat-3/client/package.json
+++ b/Chat-3/client/package.json
@@ -29,11 +29,12 @@
     "react-hot-loader": "3.1.3",
     "sass-loader": "6.0.6",
     "style-loader": "0.20.1",
-    "url-loader": "0.6.2"
+    "url-loader": "0.6.2",
+    "key-mirror": "1.0.1",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "eslint-plugin-import": "^2.8.0"
   },
   "dependencies": {
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "eslint-plugin-import": "^2.8.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.6",
