--- a/Chat-3/package.json
+++ b/Chat-3/package.json
@@ -1,15 +1,17 @@
 {
-    "name": "lesson5",
-    "version": "1.0.0",
-    "description": "lesson5 - chat on WebSocket",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start:client": "cd client && npm run devserver",
-      "start:server": "cd server && node app.js",
-      "start": "concurrently \"npm run start:server\" \"npm run start:client\""
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "lesson5",
+  "version": "1.0.0",
+  "description": "lesson5 - chat on WebSocket",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:client": "cd client && npm run devserver",
+    "start:server": "cd server && node app.js",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\""
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "key-mirror": "^1.0.1"
   }
-  
+}
